# ClaudePersonalAssistant

./: .env.example  .gitignore  README.md  calendar_integration.py  docker-compose.yml  main.py  pyproject.toml  run_assistant.sh
